--- a/sydney.css
+++ b/sydney.css
@@ -1,4 +1,3 @@
-
 html,
 body {
   margin: 0;
@@ -28,6 +27,8 @@ body {
 .hero {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
+  grid-row: 1;
+  grid-column: 1;
   grid-area: hero;
   /*background: url(img/Sydney-min.jpg)no-repeat center;*/
   background: url("https://s14.postimg.cc/6dbo1ctwh/Sydney-min.jpg")no-repeat center;
