--- a/sydney.css
+++ b/sydney.css
@@ -404,6 +404,9 @@ body {
 .love_end img {
   width: 70px}
 
+footer{
+    text-align: center;
+}
 
 @media only screen and (min-width: 2400px) {
   .hero {
