--- a/sydney.css
+++ b/sydney.css
@@ -765,5 +765,22 @@ footer{
   .love_end img {
     width: 20%;
   }
+
+  
+  .pie{
+    text-align: center;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-top: 5em;
+    margin-bottom: 2em;
+  }
+
+  .inline{
+    text-decoration: none;
+    border-top: 4px solid aquamarine;
+    padding-top: 0.7em;
+    display: inline-block;
+    color: white;
+  }
 }
   
