--- a/sydney.css
+++ b/sydney.css
@@ -402,7 +402,26 @@ body {
 }
 
 .love_end img {
-  width: 70px}
+  width: 70px
+}
+
+
+.pie{
+  text-align: center;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-top: 5em;
+  margin-bottom: 2em;
+}
+
+.inline{
+  text-decoration: none;
+  border-top: 4px solid aquamarine;
+  padding-top: 0.7em;
+  display: inline-block;
+  color: white;
+}
+
 
 footer{
     text-align: center;
@@ -765,22 +784,6 @@ footer{
   .love_end img {
     width: 20%;
   }
-
   
-  .pie{
-    text-align: center;
-    cursor: pointer;
-    font-size: 1rem;
-    margin-top: 5em;
-    margin-bottom: 2em;
-  }
-
-  .inline{
-    text-decoration: none;
-    border-top: 4px solid aquamarine;
-    padding-top: 0.7em;
-    display: inline-block;
-    color: white;
-  }
 }
   
