Cambio de color de nombre

--- a/sydney.css
+++ b/sydney.css
@@ -419,7 +419,7 @@ body {
   border-top: 4px solid aquamarine;
   padding-top: 0.7em;
   display: inline-block;
-  color: white;
+  color: black;
 }
 
 
